--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,9 @@ dependencies:
     sdk: flutter
   barcode_scan: ^2.0.2
   sqflite: ^1.3.0
-  path_provider: ^1.6.7
+  path_provider:
+  url_launcher: ^5.4.5
+  flutter_map: ^0.8.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
